<resources>
    <string name="app_name">Journal</string>
    <string name="Dish">Блюдо:</string>
    <string name="Mass">Масса/объем</string>
    <string name="getButton">Просмотр данных</string>
    <string name="addButton">Добавить</string>
    <string name="sortTag">Выбрать по:</string>
    <string-array name="EatingTimes">
        <item>Завтрак</item>
        <item>Обед</item>
        <item>Ужин</item>
        <item>Прочее</item>
    </string-array>
    <string-array name="AvailableColors">
        <item>Синий</item>
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Желтый</item>
    </string-array>
    <string name="settings_title">Настройки</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_friends">Друзья</string>
    <string name="title_settings">Настройки</string>
    <string name="AddButton">Button</string>
    <string name="mass">Масса</string>
    <string name="dish">Блюдо</string>
    <string name="AddDish">Добавить</string>
    <string name="label_breakfast">Завтрак</string>
    <string name="label_lunch">Обед</string>
    <string name="label_dinner">Ужин</string>
    <string name="label_other">Прочее</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calories">Калории</string>
    <string name="update_data">Изменить</string>
    <string name="channel_id">Journal</string>
    <string name="channel_name">\Food journal</string>
    <string name="channel_description">Simple food journal</string>
    <string name="service_name">notificationsService</string>
</resources>