<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Dish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Dish"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Mass"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Mass"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/Eating"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/EatingTimes" />

            </LinearLayout>

            <Button
                android:id="@+id/AddDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addButton"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#959595" />

            <Button
                android:id="@+id/GetItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:text="@string/sortTag"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/SortKey"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:entries="@array/sortKeys"
                    android:minHeight="48dp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#959595" />

            <TextView
                android:id="@+id/Result"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>